# hagen-engine

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  cmake_install.cmake
kolobator/: engine  level-editor
kolobator/bodies/: #box_9mm_5.lua#  barrel.xml  big_bullet.lua  box_27mm_5.lua  box_27mm_5.xml  box_9mm_5.lua  box_9mm_5.xml  break_box.lua  break_box.xml  breakable.lua  breakable_box.xml  bullet.lua  bullet.xml  bullet_27mm.lua  bullet_27mm.xml  bullet_762.lua  bullet_762.xml  bullet_9mm.lua  bullet_9mm.xml  bullet_box.lua  bullet_box.xml  grenade.lua  grenade.xml  health.lua  health.xml  health_20.lua  health_20.xml  lamp.lua  light.lua  module.lua  nora.lua  podval.xml  polka.xml  portal.lua  rock.xml  shelf.xml  table.xml  ukol.lua  ukol.xml  unbreakable_box.xml  (+4 more)
kolobator/common/: common.lua  level.lua
kolobator/config/: console.xml  game_interface.xml  imgui.xml  interface.xml  languages.xml  levels.xml  main_menu.xml  pause.xml  scripts.xml  sensors.xml  text.xml
kolobator/effects/: big_blood.xml  blood.xml  ch.xml  dust.xml  dust_ground.xml  explosion.xml
kolobator/entities/: 1.xml  basic_entity.xml  durka_man.lua  durka_man.xml  entity_k.lua  entity_k.xml  kolobator.lua  kolobator.xml  rat.lua  rat.xml
kolobator/fonts/: 20051.afm
kolobator/levels/: 1.xml  d.xml  def.xml  default.lua  default.xml  durka.lua  durka.xml  ground1.lua  ground1.xml  ground2.lua  ground2.xml  misha.xml  mx.xml  podval.lua  podval.xml
kolobator/locales/: default.xml  en.xml  ru.xml
kolobator/scripts/: Player.lua  basic_entity.lua  body.lua  common.lua  entity.lua  global.lua  init.lua  kolobator.lua  level.lua  light.lua  pistol.lua
kolobator/scripts/interface/: pause.lua
kolobator/shaders/: common.frag  common.vert  light.frag  rain.frag  v1.vert  water.frag  water.vert
kolobator/sound/: boom.flac  box_crash.flac  bullet_box.flac  knife.flac  lamp.flac  poweron.flac  shot.flac
kolobator/sound/rat/: atack1.flac  atack2.flac  die.flac  squeak1.flac  squeak2.flac  squeak3.flac  squeak4.flac
kolobator/templates/: barrel1.xml  barrel2.xml  big_bullet.xml  bullet.xml  valun.xml  wooden_box.xml
kolobator/textures/: podval_wall.png~  shelf2.png~  water.png~
kolobator/weapon/: ak47.lua  knife.lua  mv-25.lua  mv25.lua  pistol.lua  rg6.lua
kolobator/weapons/: list.xml
src/LuaBridge/: Android.mk  CMakeLists.txt  LuaBridge.h  Makefile  Map.h  Vector.h  cmake_install.cmake
src/LuaBridge/detail/: LuaException.h  LuaHelpers.h  LuaRef.h  Namespace.h  Security.h  Stack.h  Userdata.h
src/SDL_FontCache/: Android.mk  CMakeLists.txt  Makefile  SDL_FontCache.c  SDL_FontCache.h  cmake_install.cmake
src/SDL_GFX/: CMakeLists.txt  Makefile  SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_imageFilter.c  SDL2_imageFilter.h  SDL2_rotozoom.c  SDL2_rotozoom.h  cmake_install.cmake
src/XMLParser/: Android.mk  CMakeLists.txt  Makefile  cmake_install.cmake  xmlParser.cpp  xmlParser.h
src/box2d/: Android.mk  CMakeLists.txt  LICENSE  Makefile  b2_block_allocator.h  b2_body.h  b2_broad_phase.h  b2_chain_shape.h  b2_circle_shape.h  b2_collision.h  b2_common.h  b2_contact.h  b2_contact_manager.h  b2_distance.h  b2_distance_joint.h  b2_draw.h  b2_dynamic_tree.h  b2_edge_shape.h  b2_fixture.h  b2_friction_joint.h  b2_gear_joint.h  b2_growable_stack.h  b2_joint.h  b2_math.h  b2_motor_joint.h  b2_mouse_joint.h  b2_polygon_shape.h  b2_prismatic_joint.h  b2_pulley_joint.h  b2_revolute_joint.h  b2_rope.h  b2_settings.h  b2_shape.h  b2_stack_allocator.h  b2_time_of_impact.h  b2_time_step.h  b2_timer.h  b2_weld_joint.h  b2_wheel_joint.h  b2_world.h  (+2 more)
src/box2d/collision/: b2_broad_phase.cpp  b2_chain_shape.cpp  b2_circle_shape.cpp  b2_collide_circle.cpp  b2_collide_edge.cpp  b2_collide_polygon.cpp  b2_collision.cpp  b2_distance.cpp  b2_dynamic_tree.cpp  b2_edge_shape.cpp  b2_polygon_shape.cpp  b2_time_of_impact.cpp
src/box2d/common/: b2_block_allocator.cpp  b2_draw.cpp  b2_math.cpp  b2_settings.cpp  b2_stack_allocator.cpp  b2_timer.cpp
src/box2d/dynamics/: b2_body.cpp  b2_chain_circle_contact.cpp  b2_chain_circle_contact.h  b2_chain_polygon_contact.cpp  b2_chain_polygon_contact.h  b2_circle_contact.cpp  b2_circle_contact.h  b2_contact.cpp  b2_contact_manager.cpp  b2_contact_solver.cpp  b2_contact_solver.h  b2_distance_joint.cpp  b2_edge_circle_contact.cpp  b2_edge_circle_contact.h  b2_edge_polygon_contact.cpp  b2_edge_polygon_contact.h  b2_fixture.cpp  b2_friction_joint.cpp  b2_gear_joint.cpp  b2_island.cpp  b2_island.h  b2_joint.cpp  b2_motor_joint.cpp  b2_mouse_joint.cpp  b2_polygon_circle_contact.cpp  b2_polygon_circle_contact.h  b2_polygon_contact.cpp  b2_polygon_contact.h  b2_prismatic_joint.cpp  b2_pulley_joint.cpp  b2_revolute_joint.cpp  b2_weld_joint.cpp  b2_wheel_joint.cpp  b2_world.cpp  b2_world_callbacks.cpp
src/box2d/rope/: b2_rope.cpp
src/engine/: Android.mk  camera.cpp  camera.h  camera.hpp  console.cpp  console.hpp  dialog.cpp  dialog.hpp  effect.cpp  effect.hpp  entity.cpp  entity.h  entity.hpp  game.cpp  game.h  input.cpp  input.hpp  interface.cpp  interface.hpp  level.cpp  level.h  level.hpp  lua.cpp  lua.hpp  lua_draw.cpp  lua_draw.hpp  main.cpp  main.hpp  physic.cpp  physic.hpp  player.cpp  player.h  player.hpp  render.cpp  render.h  render.hpp  sdl.cpp  sdl.h  sdl.hpp  sensor.cpp  (+11 more)
src/imgui/: CMakeLists.txt  Makefile  cmake_install.cmake  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
src/imgui/examples/: gl_glcore_3_3.h  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl_es2.cpp  imgui_impl_sdl_es2.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
src/level-editor/: body.cpp  body.h  body.hpp  defines.h  defines.hpp  editor.cpp  editor.h  editor.hpp  events.cpp  events.hpp  joint.cpp  joint.h  joint.hpp  level.cpp  level.h  level.hpp  main.cpp  main.hpp  object.cpp  object.h  object.hpp  shape.cpp  shape.h  shape.hpp  tree_view.cpp  tree_view.hpp  utils.cpp  utils.hpp
src/triangulate/: CMakeLists.txt  Makefile  cmake_install.cmake  triangulate.cpp  triangulate.h  triangulate.hpp
(+10 files in other folders)
