set(SOURCES
	collision/b2_broad_phase.cpp
	collision/b2_chain_shape.cpp
	collision/b2_circle_shape.cpp
	collision/b2_collide_circle.cpp
	collision/b2_collide_edge.cpp
	collision/b2_collide_polygon.cpp
	collision/b2_collision.cpp
	collision/b2_distance.cpp
	collision/b2_dynamic_tree.cpp
	collision/b2_edge_shape.cpp
	collision/b2_polygon_shape.cpp
	collision/b2_time_of_impact.cpp
	common/b2_block_allocator.cpp
	common/b2_draw.cpp
	common/b2_math.cpp
	common/b2_settings.cpp
	common/b2_stack_allocator.cpp
	common/b2_timer.cpp
	dynamics/b2_body.cpp
	dynamics/b2_chain_circle_contact.cpp
	dynamics/b2_chain_circle_contact.h
	dynamics/b2_chain_polygon_contact.cpp
	dynamics/b2_chain_polygon_contact.h
	dynamics/b2_circle_contact.cpp
	dynamics/b2_circle_contact.h
	dynamics/b2_contact.cpp
	dynamics/b2_contact_manager.cpp
	dynamics/b2_contact_solver.cpp
	dynamics/b2_contact_solver.h
	dynamics/b2_distance_joint.cpp
	dynamics/b2_edge_circle_contact.cpp
	dynamics/b2_edge_circle_contact.h
	dynamics/b2_edge_polygon_contact.cpp
	dynamics/b2_edge_polygon_contact.h
	dynamics/b2_fixture.cpp
	dynamics/b2_friction_joint.cpp
	dynamics/b2_gear_joint.cpp
	dynamics/b2_island.cpp
	dynamics/b2_island.h
	dynamics/b2_joint.cpp
	dynamics/b2_motor_joint.cpp
	dynamics/b2_mouse_joint.cpp
	dynamics/b2_polygon_circle_contact.cpp
	dynamics/b2_polygon_circle_contact.h
	dynamics/b2_polygon_contact.cpp
	dynamics/b2_polygon_contact.h
	dynamics/b2_prismatic_joint.cpp
	dynamics/b2_pulley_joint.cpp
	dynamics/b2_revolute_joint.cpp
	dynamics/b2_weld_joint.cpp
	dynamics/b2_wheel_joint.cpp
	dynamics/b2_world.cpp
	dynamics/b2_world_callbacks.cpp
	rope/b2_rope.cpp
)

set(HEADERS
	b2_api.h
	b2_block_allocator.h
	b2_body.h
	b2_broad_phase.h
	b2_chain_shape.h
	b2_circle_shape.h
	b2_collision.h
	b2_common.h
	b2_contact.h
	b2_contact_manager.h
	b2_distance.h
	b2_distance_joint.h
	b2_draw.h
	b2_dynamic_tree.h
	b2_edge_shape.h
	b2_fixture.h
	b2_friction_joint.h
	b2_gear_joint.h
	b2_growable_stack.h
	b2_joint.h
	b2_math.h
	b2_motor_joint.h
	b2_mouse_joint.h
	b2_polygon_shape.h
	b2_prismatic_joint.h
	b2_pulley_joint.h
	b2_revolute_joint.h
	b2_rope.h
	b2_settings.h
	b2_shape.h
	b2_stack_allocator.h
	b2_time_of_impact.h
	b2_timer.h
	b2_time_step.h
	b2_types.h
	b2_weld_joint.h
	b2_wheel_joint.h
	b2_world.h
	b2_world_callbacks.h
	box2d.h
)
add_library(box2d SHARED ${SOURCES} ${HEADERS})